--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,10 +4,10 @@ license="GNU GPLv3"
 
 [[mods]]
 modId="skyfarm_client"
-version="1.0.1"
+version="1.0.2"
 updateJSONURL="https://raw.githubusercontent.com/North-West-Wind/SkyFarmClient/main/update.json"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/sky-farm-client"
-displayName="Sky Farm Discord"
+displayName="Sky Farm Client"
 credits="Thanks to Clear Skies and Botania"
 authors="NorthWestWind"
 description='''
