--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="GNU GPLv3"
 
 [[mods]]
 modId="skyfarm_client"
-version="1.0.5"
+version="1.0.6"
 updateJSONURL="https://raw.githubusercontent.com/North-West-Wind/SkyFarmClient/main/update.json"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/sky-farm-client"
 displayName="Sky Farm Client"
@@ -18,12 +18,14 @@ Client-side enhancements for Sky Farm.
     modId="forge"
     mandatory=true
     versionRange="[36,)"
-    ordering="NONE"
-    side="BOTH"
 
 [[dependencies.skyfarm_client]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.16.5,1.17)"
-    ordering="NONE"
-    side="BOTH"
+
+[[dependencies.skyfarm_client]]
+    modId="botania"
+    mandatory=false
+    versionRange="[1.16.4-413,)"
+    ordering="AFTER"
